Resulto Bug con IE9

--- a/less/style.less
+++ b/less/style.less
@@ -1501,10 +1501,12 @@ src: url('../fonts/entypo.woff'),
             }
         .marcas{
           ul li{
-            display: inline;
+            display: inline-block;
             margin-right: 5px;
             margin-top: 4px;
-            line-height: 65px;            
+            line-height: 65px;   
+            width: 60px;
+            height: 60px;         
           }
         }
 
